--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -100,6 +100,8 @@
     font-weight: 400;
     letter-spacing: 0;
     text-decoration: none;
+    text-transform: uppercase;
+
   }
   
   .footer .footer-section-2-wrapper {
