--- a/src/pages/ShopProfile/ShopProfile.css
+++ b/src/pages/ShopProfile/ShopProfile.css
@@ -3,7 +3,7 @@
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 100px;
     position: relative;
     padding: 0 3%;
   }
@@ -15,6 +15,7 @@
     gap: 30px;
     position: relative;
     width: 100%;
+    padding: 50px 0;
   }
   
   .shop-profile .section1-part1 {
@@ -27,7 +28,7 @@
     justify-content: space-around;
     padding: 20px 0px;
     position: relative;
-    width: 55%;
+    width: 50%;
   }
   
   .shop-profile .images-2 {
@@ -36,7 +37,7 @@
     flex-grow: 1;
     object-fit: cover;
     position: relative;
-    height: 70dvh;
+    height: 60dvh;
     width: 100%;
   }
   
@@ -44,10 +45,10 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     padding: 20px 0px;
     position: relative;
-    width: 45%;
+    width: 50%;
   }
   
   .shop-profile .frame-7 {
@@ -61,7 +62,7 @@
   .shop-profile .text-wrapper-8 {
     color: #000000;
     font-family: "Roboto-Medium", Helvetica;
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 500;
     letter-spacing: 0;
     line-height: normal;
@@ -86,12 +87,13 @@
     color: #000000;
     flex: 1;
     font-family: "Roboto-Regular", Helvetica;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 0;
     line-height: normal;
     margin-top: -1px;
     position: relative;
+    margin-bottom: 0;
   }
   
   .shop-profile .frame-8 {
@@ -99,7 +101,7 @@
     align-self: stretch;
     display: flex;
     flex: 0 0 auto;
-    gap: 50px;
+    gap: 30px;
     position: relative;
     width: 100%;
   }
@@ -107,7 +109,7 @@
   .shop-profile .text-wrapper-9 {
     color: #000000;
     font-family: "Roboto-Regular", Helvetica;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 0;
     line-height: normal;
@@ -117,31 +119,24 @@
     width: fit-content;
   }
   
-  .shop-profile .frame-9 {
+  .shop-profile .frame-9-links {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
-    gap: 10px;
+    gap: 15px;
     justify-content: center;
     position: relative;
   }
-  
-  .shop-profile .vector {
-    height: 32px;
-    position: relative;
-    width: 32px;
-  }
-  
-  .shop-profile .vector-2 {
-    height: 32px;
-    position: relative;
-    width: 33px;
+  .shop-profile .icon-links{
+    text-decoration: none;
+    color: #000000;
+    font-size: 18px;
   }
   
   .shop-profile .text-wrapper-10 {
     color: #000000;
     font-family: "Roboto-Regular", Helvetica;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 0;
     line-height: normal;
@@ -172,14 +167,26 @@
     gap: 20px;
     padding: 20px 0px 0px;
     position: relative;
+    width: 50%;
   }
   
+  .shop-profile .frame-stop-by {
+    align-items: center;
+    display: inline-flex;
+    flex: 0 0 auto;
+    gap: 10px;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
   .shop-profile .frame-11 {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
-    gap: 50px;
     position: relative;
+    width: 100%;
+    gap: 30px;
   }
   
   .shop-profile .frame-12 {
@@ -191,21 +198,46 @@
     flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
-    padding: 0px 50px 0px 0px;
+    padding: 0px 25px 0px 0px;
     position: relative;
+    width: 48%;
+  }
+  .shop-profile .frame-days {
+    align-items: flex-start;
+    display: inline-flex;
+    flex: 0 0 auto;
+    gap: 10px;
+    position: relative;
+    width: 100%;
   }
   .shop-profile .days {
     color: #000000;
     font-family: "Roboto-Regular", Helvetica;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 0;
     line-height: normal;
     margin-top: -1px;
     position: relative;
-    text-align: center;
+    text-align: right;
     white-space: nowrap;
     width: fit-content;
+    width: 60%;
+    text-transform: uppercase;
+  }
+  .shop-profile .time {
+    color: #000000;
+    font-family: "Roboto-Regular", Helvetica;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: normal;
+    margin-top: -1px;
+    position: relative;
+    text-align: right;
+    white-space: nowrap;
+    width: fit-content;
+    width: 40%;
   }
   
   .shop-profile .frame-13 {
@@ -215,17 +247,38 @@
     flex-direction: column;
     gap: 10px;
     position: relative;
+    width: 50%;
   }
-  
+  .shop-profile .frame-address {
+    align-items: flex-start;
+    display: inline-flex;
+    flex: 0 0 auto;
+    gap: 10px;
+    position: relative;
+    width: 100%;
+  }
+  .shop-profile .address {
+    color: #000000;
+    font-family: "Roboto-Regular", Helvetica;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: normal;
+    margin-top: -1px;
+    position: relative;
+    text-align: left;
+    white-space: wrap;
+    width: fit-content;
+  }
   .shop-profile .map-wrapper {
     align-items: center;
     display: flex;
     gap: 10px;
-    height: 320px;
+    height: 50dvh;
     justify-content: center;
     padding: 10px;
     position: relative;
-    width: 752.95px;
+    width: 40%;
   }
   
   .shop-profile .map {
@@ -246,54 +299,13 @@
     gap: 30px;
     position: relative;
     width: 100%;
+    padding: 50px 0;
   }
-  
-  .shop-profile .text-wrapper-11 {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 32px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1px;
-    position: relative;
-    text-align: center;
-    white-space: nowrap;
-    width: fit-content;
-  }
-  
   .shop-profile .frame-15 {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
     gap: 24px;
-    justify-content: center;
-    position: relative;
-  }
-  
-  .shop-profile .frame-wrapper {
-    align-items: flex-start;
-    display: inline-flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-    position: relative;
-  }
-  
-  .shop-profile .images-3 {
-    height: 301.5px;
-    margin-bottom: -10.5px;
-    margin-left: -1.5px;
-    margin-right: -7.5px;
-    object-fit: cover;
-    position: relative;
-    width: 276px;
-  }
-  
-  .shop-profile .img-wrapper {
-    align-items: center;
-    display: inline-flex;
-    flex: 0 0 auto;
-    gap: 12.05px;
     justify-content: center;
     position: relative;
   }
@@ -310,22 +322,18 @@
     width: 100%;
   }
   
-  .shop-profile .read-reviews-on-yelp-wrapper {
+  .shop-profile .read-button-btn {
     align-items: center;
     background-color: #000000;
     border-radius: 30px;
     display: inline-flex;
     flex: 0 0 auto;
-    gap: 10px;
     justify-content: center;
     padding: 10px 20px;
     position: relative;
   }
   
-  .shop-profile .read-reviews-on-yelp {
-    color: #ffffff;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 20px;
+  .shop-profile .read {
     font-weight: 400;
     letter-spacing: 0;
     line-height: normal;
@@ -334,51 +342,20 @@
     text-align: center;
     white-space: nowrap;
     width: fit-content;
+    margin: 0;
   }
   
+  .shop-profile .span {
+    color: #ffffff;
+    font-family: "Roboto-Regular", Helvetica;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
   .shop-profile .frame-17 {
     height: 38.32px;
     position: relative;
     width: 38.32px;
-  }
-  
-  .shop-profile .search-card-instance {
-    flex: 0 0 auto !important;
-  }
-  
-  .shop-profile .search-card-2 {
-    height: 301.5px !important;
-    margin-bottom: -10.5px !important;
-    margin-left: -1.5px !important;
-    margin-right: -7.5px !important;
-    width: 276px !important;
-  }
-  
-  .shop-profile .search-card-3 {
-    gap: 12.05px !important;
-  }
-  
-  .shop-profile .search-card-4 {
-    gap: 2.41px !important;
-  }
-  
-  .shop-profile .search-card-5 {
-    font-family: "Roboto-Bold", Helvetica !important;
-    font-size: 18.1px !important;
-    font-weight: 700 !important;
-    line-height: 26.1px !important;
-    margin-top: -1.21px !important;
-  }
-  
-  .shop-profile .search-card-6 {
-    height: 361.16px !important;
-    margin-bottom: -10.5px !important;
-    margin-left: -1.5px !important;
-    margin-right: -7.5px !important;
-    width: 330.74px !important;
-  }
-  
-  .shop-profile .footer-instance {
-    background-color: transparent !important;
-    flex: 0 0 auto !important;
   }
