--- a/src/components/SignUpPopUp/SignUpPopUp.css
+++ b/src/components/SignUpPopUp/SignUpPopUp.css
@@ -1,25 +1,40 @@
 .sign-up-pop-up {
-    align-items: flex-start;
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    height: 250px;
-    justify-content: center;
-    padding: 0px 20px 20px;
-    position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  }
+  .sign-up-pop-up .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.08); /* Transparent black background */
   }
   
   .sign-up-pop-up .frame {
-    align-items: flex-start;
-    display: inline-flex;
-    flex: 0 0 auto;
-    gap: 10px;
-    padding: 11px 0px 0px;
     position: relative;
+    background: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+    padding: 20px;
+    border-radius: 10px;
+    z-index: 1001;
+    max-width: 40vw;
+    width: 100%;
+    max-height: 70vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
   
-  .sign-up-pop-up .x {
+  .sign-up-pop-up .close {
     color: #000000;
     font-family: "Roboto-Bold", Helvetica;
     font-size: 24px;
@@ -33,7 +48,7 @@
     width: fit-content;
   }
   
-  .sign-up-pop-up .div-wrapper {
+  .sign-up-pop-up .sign-wrapper {
     align-items: center;
     align-self: stretch;
     display: flex;
@@ -56,6 +71,7 @@
     text-align: center;
     white-space: nowrap;
     width: fit-content;
+    margin: 0;
   }
   
   .sign-up-pop-up .div {
