--- a/src/components/SignUpPopUp/SignUpPopUp.css
+++ b/src/components/SignUpPopUp/SignUpPopUp.css
@@ -25,7 +25,7 @@
     padding: 20px;
     border-radius: 10px;
     z-index: 1001;
-    max-width: 25vw;
+    max-width: 400px;
     width: 100%;
     max-height: 70vh;
     overflow: hidden;
