--- a/src/components/Map/MapComponent.css
+++ b/src/components/Map/MapComponent.css
@@ -1,5 +1,5 @@
-/* src/components/Map/MapComponent.css */
-.leaflet-container {
-    height: 100%;
-    width: 100%;
-  }
+/* MapComponent.css */
+.map-container {
+  width: 100%;
+  height: 100%;
+}
