--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -10,7 +10,7 @@
   
   .card-image {
     width: 100%;
-    height: 350px;
+    height: 250px;
     object-fit: cover;
     border-radius: 15px;
 
@@ -21,13 +21,24 @@
   }
   
   .card-title {
-    font-size: 22px;
+    font-family: "brandon-grotesque", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1.4em;
+    color: black;
+    line-height: 1.5;
     margin: 0;
+    text-transform: capitalize;
   }
   
   .card-description {
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 0.95em;
+    color: gray;
+    line-height: 1.5;
+    letter-spacing: 1px;
     margin: 0;
-    font-size: 16px;
-    color: #555;
     text-transform: uppercase;
   }
