--- a/src/components/EmailCollectionInput/EmailCollectionInput.css
+++ b/src/components/EmailCollectionInput/EmailCollectionInput.css
@@ -5,7 +5,7 @@
     border-radius: 60.78px;
     display: inline-flex;
     flex: 0 0 auto;
-    gap: 20px;
+    gap: 10px;
     overflow: hidden;
     padding: 10px 10px;
     position: relative;
@@ -29,10 +29,10 @@
   
   .email-collection .email-collection-input {
     color: #615f5f;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 1px;
     line-height: normal;
     margin-top: -0.86px;
     position: relative;
@@ -66,10 +66,10 @@
   
   .email-collection .text-wrapper-4 {
     color: #ffffff;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18.7px;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 1px;
     line-height: normal;
     margin-top: -0.58px;
     position: relative;
