--- a/src/components/FilterNavbar/FilterNavbar.css
+++ b/src/components/FilterNavbar/FilterNavbar.css
@@ -1,7 +1,7 @@
 .filter-navbar {
     align-items: center;
     display: flex;
-    justify-content: space-between;
+    gap: 50px;
     position: relative;
     width: 100%;
     padding: 2% 0;
@@ -17,10 +17,10 @@
   
   .filter-navbar .text-wrapper {
     color: #000000;
-    font-family: "Roboto-Bold", Helvetica;
-    font-size: 22px;
-    font-weight: 700;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1.1em;
+    font-weight: 600;
+    letter-spacing: 2px;
     line-height: normal;
     margin-top: -1px;
     position: relative;
@@ -49,10 +49,10 @@
   
   .filter-navbar .text-wrapper-2 {
     color: #000000;
-    font-family: "Roboto-Light", Helvetica;
-    font-size: 18px;
-    font-weight: 300;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 100;
+    letter-spacing: 2px;
     line-height: normal;
     position: relative;
     white-space: nowrap;
