--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/yfs0bso.css");
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
 .head {
     align-items: flex-start;
     border-bottom-style: solid;
@@ -44,11 +46,11 @@
 
   }
   .head .text-wrapper {
-    color: #696363;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
+    text-transform: uppercase;
+    font-size: 1em;
+    letter-spacing: 2px;
+    font-weight: 600;
+    font-family:  "brandon-grotesque", sans-serif;
     line-height: normal;
     margin-top: -1px;
     position: relative;
@@ -93,21 +95,10 @@
   
   .head .text-wrapper-2 {
     color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 22px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    position: relative;
-    white-space: nowrap;
-    width: fit-content;
-  } 
-  .head .text-wrapper-3 {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 22px;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-family: "brandon-grotesque", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 2em;
     line-height: normal;
     position: relative;
     white-space: nowrap;
