--- a/src/components/LocationSearchInput/LocationSearchInput.css
+++ b/src/components/LocationSearchInput/LocationSearchInput.css
@@ -5,26 +5,26 @@
     flex-direction: row;
 }
 .head .Location-input {
-    align-items: center;
-    border: 1px solid;
+    border: 1px solid rgba(32, 46, 64, .8);
+    background:rgba(0, 0, 0, .08);;
     border-color: #000000;
     display: inline-flex;   
     justify-content: center;
     padding: 0px 10px;
     position: relative;
     color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 16px;
-    font-weight: 400;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
     letter-spacing: 0;
     line-height: normal;
   }
   .head .Location-input::placeholder{
     color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 16px;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 0.5px;
     line-height: normal;
     margin-top: -1px;
     position: relative;
@@ -38,8 +38,8 @@
     background-color: #000000;
     padding: 0; /* Remove padding to ensure a perfect circle */
     border-radius: 50%;
-    width: 50px; /* Set the width */
-    height: 50px; /* Set the height to be equal to the width */
+    width: 40px; /* Set the width */
+    height: 40px; /* Set the height to be equal to the width */
     font-size: 28px;
     color: #ffffff; /* Optional: add color to make the text visible */
   }
