--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,214 +1,136 @@
-.about {
-    align-items: flex-start;
-    background-color: #ffffff;
+@import url("https://use.typekit.net/yfs0bso.css");
+:root {
+    --background-color1:#FDF4ED;
+    --color1:#202D3F;
+    --color2:#3779A6;
+    --color3:#FFF8F2;
+    --color4:#FBF3EC;
+    --color5:#DBAE8F;
+    --color6:#B3553D;
+  }
+  .container-about{
+    position: relative;
+  }
+  .container-about .section-1{
+ display: flex;
+ width: 100%;
+}
+
+.container-about .section-1 .text-section {
     display: flex;
     flex-direction: column;
-    position: relative;
-  }
-  
-  
-  .about .about-container {
-    align-items: flex-start;
-    align-self: stretch;
-    display: flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-    position: relative;
-    width: 100%;
-  }
-  
-  .about .about-content {
-    align-items: flex-start;
-    align-self: stretch;
-    display: flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-    gap: 50px;
-    padding: 0px 3%;
-    position: relative;
-  }
-  
-  .about .section1 {
-    align-items: center;
-    align-self: stretch;
-    display: flex;
-    flex: 0 0 auto;
-    gap: 30px;
-    position: relative;
-    width: 100%;
-  }
-  
-  .about .part1 {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    padding: 20px 20px;
-    position: relative;
-    width: 38%;
-    margin: 5% 5%;
-  }
-  
-  .about .every-time-you-spend-wrapper {
-    align-items: flex-start;
-    display: inline-flex;
-    flex: 0 0 auto;
-    gap: 10px;
-    position: relative;
-  }
-  
-  .about .p {
-    color: #000000;
-    font-family: "Roboto-Medium", Helvetica;
-    font-size: 28px;
+    margin-left: 8%;
+    margin-top: 8%;
+    color: var(--color1);
+    text-align: center;
+    width: 45%;
+    
+}
+.container-about .section-1 .text-section h1{
+    text-align: center;
+    font-family: "brandon-grotesque", sans-serif;
+    font-style: normal;
     font-weight: 500;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1px;
-    position: relative;
+    font-size: 37px;
+    line-height: 1.15;
+}
+.container-about .section-1 .text-section h3{
+    letter-spacing: 2px;
+    font-family: "brandon-grotesque", sans-serif;
+    font-weight: 500;
+    font-size: 2.2vh;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    line-height: 1.15;
+}
+.container-about .description1{
+    width: 80%;
+}
+
+.container-about .section-1 .text-section .description{
+    color: #202D3F;
+    font-size: 2.1vh;
+    font-weight: 500;
+    font-style: normal;
+    font-family:  'Alegreya', sans-serif;
+    width: 80%;
+}
+.container-about .section-1 .text-section .description p{
     text-align: center;
-    width: fit-content;
-    margin: 0;
-  }
-  
-  .about .p1 {
-    align-items: center;
-    align-self: stretch;
-    display: flex;
-    flex: 0 0 auto;
-    gap: 10px;
     justify-content: center;
-    position: relative;
-  }
-  
-  .about .text-wrapper-7 {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 20px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1px;
-    position: relative;
-    text-align: center;
-    margin: 0;
-  }
-  
-  .about .images-wrapper {
-    align-items: flex-start;    
-    align-self: stretch;
-    flex: 1;
-    flex-grow: 1;
+    line-height: 1.35;
+}
+
+.container-about .section-1 .image-section{
+    width: 55%;
+}
+.container-about .section-1 .image-section img{
+  width: 100%;
+  height: 100%;
+  max-height: 90vh;
+}
+
+.container-about .section-2{
     display: flex;
-    position: relative;
-    margin-right: -2%;
-    margin-top: 2%;
-  }
-  
-  .about .images {
-    align-self: stretch;
-    flex: 1;
-    flex-grow: 1;
-    width: 500px;
-    max-height: fit-content;
-    position: relative;
-  }
-  
-  .about .section-2 {
-    align-items: center;
-    align-self: stretch;
-    display: flex;
-    flex: 0 0 auto;
     flex-direction: column;
-    gap: 30px;
-    position: relative;
-    width: 100%;
-    padding: 20px 0;
-  }
-  .about .by-connecting{
-    display: flex;
+    color: var(--color1);
     align-items: center;
-    width: 40%;
-  }
-  .about .businesses-section {
-    align-items: flex-start;
-    align-self: stretch;
-    display: flex;
-    flex: 0 0 auto;
-    justify-content: space-between;
-    position: relative;
     width: 100%;
-  }
-  
-  .about .frame-1 {
-    align-items: center;
+}
+.container-about .section-2 h1{
+    text-align: center;
+    margin-top: 8%;
+    font-family: "brandon-grotesque", sans-serif;
+    font-size: 40px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing:1px;
+    line-height: 1.15;
+}
+.container-about .section-2 .texts{
+    display: flex; 
+    width: 80%;
+    margin-top: 5%;
+   
+}
+.container-about .section-2 .texts .text-one,.section-2 .texts .text-two, .section-2 .texts .text-three {
     display: flex;
-    flex: 0 0 auto;
     flex-direction: column;
-    gap: 10px;
-    justify-content: center;
-    position: relative;
-    width: 30%;
-  }
-  
-  .about .MAKERS-ARTISANS {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 20px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1px;
-    position: relative;
     text-align: center;
-  }
-  
-  .about .MAKERS-ARTISANS-p {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
+    margin-left: 2%;
+}
+.container-about .section-2 .texts .text-two{
+margin-top: -0.5%;
+}
+.container-about .section-2 .texts p{
+    margin-top: 3%;
+    font-family: 'Alegreya', serif;
+    font-weight: 100;
+    font-size: 2.1vh;
+}
+.container-about .section-2 .texts h1{
+    line-height: 1.5;
+    letter-spacing: 3px;
+    font-family: "brandon-grotesque", sans-serif;
+    font-weight: 500;
+    font-size: 2.6vh;
+    margin-top: 0;
+}
+.container-about .section-2 button{
     position: relative;
-    text-align: center;
-    width: fit-content;
-    margin: 7px;
-  }
-  
-  .about .explore-shops-button {
-    align-items: center;
-    background-color: #000000;
-    border-radius: 25px;
-    display: inline-flex;
-    flex: 0 0 auto;
-    gap: 10px;
-    justify-content: center;
-    padding: 10px 20px;
-    position: relative;
-  }
-  .about .explore-shops-button-btn{
-    text-decoration: none;
-    background: none;
-    color: transparent;
+    height: 7vh;
+    width: 107%;
+    color:rgba(255, 248, 242);
+    background-color: black;
     border: none;
-    padding: 0;
-  margin: 0;
-  color: inherit;
-  font: inherit;
-  cursor: pointer;
-  }
-  
-  .about .text-wrapper-8 {
-    color: #ffffff;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1px;
-    position: relative;
-    text-align: center;
-    white-space: nowrap;
-    width: fit-content;
-  }
+    font-size: 1.8vh;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-style: normal;
+    margin-top: 15%;
+    margin-bottom: 40%;
+
+}
+
+
