--- a/src/pages/ShopProfile/ShopProfile.css
+++ b/src/pages/ShopProfile/ShopProfile.css
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding: 20px 0px;
+    padding: 40px 0px;
     position: relative;
     width: 50%;
   }
@@ -167,26 +167,26 @@
     gap: 20px;
     padding: 20px 0px 0px;
     position: relative;
-    width: 50%;
+    width: 60%;
   }
   
   .shop-profile .frame-stop-by {
     align-items: center;
-    display: inline-flex;
+    display: flex;
+    flex-direction: column;
     flex: 0 0 auto;
     gap: 10px;
     justify-content: center;
     position: relative;
     text-align: center;
-    width: 100%;
+    width: 80%;
   }
   .shop-profile .frame-11 {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
-    position: relative;
+    position: relative; 
     width: 100%;
-    gap: 30px;
   }
   
   .shop-profile .frame-12 {
@@ -198,9 +198,9 @@
     flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
-    padding: 0px 25px 0px 0px;
+    padding: 0px 30px 0px 0px;
     position: relative;
-    width: 48%;
+    width: 50%;
   }
   .shop-profile .frame-days {
     align-items: flex-start;
@@ -209,35 +209,32 @@
     gap: 10px;
     position: relative;
     width: 100%;
+    color: #000000;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    line-height: normal;
   }
   .shop-profile .days {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
+    
     margin-top: -1px;
     position: relative;
     text-align: right;
     white-space: nowrap;
     width: fit-content;
-    width: 60%;
+    width: 65%;
     text-transform: uppercase;
   }
   .shop-profile .time {
-    color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
+   
     line-height: normal;
     margin-top: -1px;
     position: relative;
     text-align: right;
     white-space: nowrap;
     width: fit-content;
-    width: 40%;
+    width: 35%;
   }
   
   .shop-profile .frame-13 {
@@ -248,6 +245,8 @@
     gap: 10px;
     position: relative;
     width: 50%;
+    padding: 0px 0px 0px 30px;
+
   }
   .shop-profile .frame-address {
     align-items: flex-start;
@@ -259,10 +258,10 @@
   }
   .shop-profile .address {
     color: #000000;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 1px;
     line-height: normal;
     margin-top: -1px;
     position: relative;
@@ -347,10 +346,11 @@
   
   .shop-profile .span {
     color: #ffffff;
-    font-family: "Roboto-Regular", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    line-height: normal;
     text-decoration: none;
     text-transform: uppercase;
   }
