--- a/src/components/FilterNavbar/mobile.filterNavbar.css
+++ b/src/components/FilterNavbar/mobile.filterNavbar.css
@@ -4,10 +4,10 @@
         align-items: stretch;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 15px;
         position: relative;
         width: 100%;
-        padding: 2% 0;
+        padding: 4% 0;
       }
       
       .filter-navbar .city-frame {
@@ -20,23 +20,21 @@
       
       .filter-navbar .text-wrapper {
         color: #000000;
-        font-family: "Roboto-Bold", Helvetica;
-        font-size: 22px;
-        font-weight: 700;
-        letter-spacing: 0;
+        font-family: 'Freight Sans Pro Medium', sans-serif;
+        font-size: 1.1em;
+        font-weight: 600;
+        letter-spacing: 2px;
         line-height: normal;
         margin-top: -1px;
         position: relative;
         white-space: nowrap;
-        text-align: left;
       }
-      
       .filter-navbar .nav-list-frame {
         align-items: center;
         display: inline-flex;
         flex: 0 0 auto;
-        gap: 40px;
-        justify-content: center;
+        gap: 20px;
+        justify-content: space-around;
         position: relative;
         overflow: scroll;
       }
@@ -50,14 +48,12 @@
         padding: 10px;
         position: relative;
       }
-      
-      
       .filter-navbar .text-wrapper-2 {
         color: #000000;
-        font-family: "Roboto-Light", Helvetica;
-        font-size: 18px;
-        font-weight: 300;
-        letter-spacing: 0;
+        font-family: 'Freight Sans Pro Medium', sans-serif;
+        font-size: 1em;
+        font-weight: 100;
+        letter-spacing: 1px;
         line-height: normal;
         position: relative;
         white-space: nowrap;
