mobile responsiveness edit

--- a/src/components/FilterNavbar/mobile.filterNavbar.css
+++ b/src/components/FilterNavbar/mobile.filterNavbar.css
@@ -33,25 +33,25 @@
         align-items: center;
         display: inline-flex;
         flex: 0 0 auto;
-        gap: 20px;
-        justify-content: space-around;
+        gap: 0px;
+        justify-content: space-between;
         position: relative;
         overflow: scroll;
       }
       
       .filter-navbar .nav-lists{
-        align-items: center;
+        align-items: flex-start;
         display: inline-flex;
         flex: 0 0 auto;
         gap: 10px;
         justify-content: center;
-        padding: 10px;
+        padding: 5px;
         position: relative;
       }
       .filter-navbar .text-wrapper-2 {
         color: #000000;
         font-family: 'Freight Sans Pro Medium', sans-serif;
-        font-size: 1em;
+        font-size: 0.8em;
         font-weight: 100;
         letter-spacing: 1px;
         line-height: normal;
