admin add store

--- a/src/pages/Admin/Main/AdminHome/AdminHome.css
+++ b/src/pages/Admin/Main/AdminHome/AdminHome.css
@@ -12,3 +12,8 @@
     gap: 10px;
 
 }
+.Admin-container .add-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
