--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -1,5 +1,5 @@
 .search-container {
-    padding: 0 3%;
+    padding: 0 0 0 3%;
   }
   
   .search-container .map-and-items {
@@ -17,12 +17,12 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 16px;
     width: 100%;
+    padding: 3% 0 0 0;
   }
   
   .search-container .map-container {
     width: 40%;
     height: 100vh; /* Full screen height */
-    position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
   }
