--- a/src/components/FilterInSearch/Filter.css
+++ b/src/components/FilterInSearch/Filter.css
@@ -1,59 +1,61 @@
-.filter-navbar {
-    align-items: center;
-    display: none;
-    gap: 50px;
+.filter {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
     position: relative;
-    width: 100%;
     padding: 2% 0;
   }
-  .filter-navbar .city-frame {
+  
+  .filter .city-frame {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
-    justify-content: center;
+    justify-content: flex-start;
     position: relative;
   }
   
-  .filter-navbar .text-wrapper {
+  .filter .text-wrapper {
     color: #000000;
     font-family: 'Freight Sans Pro Medium', sans-serif;
-    font-size: 1.1em;
+    font-size: 0.9em;
     font-weight: 600;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
     line-height: normal;
     margin-top: -1px;
     position: relative;
     white-space: nowrap;
   }
   
-  .filter-navbar .nav-list-frame {
+  .filter .nav-list-frame {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
-    gap: 40px;
-    justify-content: center;
+    gap: 10px;
     position: relative;
   }
   
-  .filter-navbar .nav-lists{
+  .filter .nav-lists{
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
     gap: 10px;
     justify-content: center;
-    padding: 10px;
     position: relative;
+    padding: 10px 20px 0px 0px;
+    border-right: 1px solid rgba(32, 46, 64, .8);
   }
-  
-  
-  .filter-navbar .text-wrapper-2 {
+  .nav-lists.offer-class {
+   border: none;
+}
+  .filter .text-wrapper-2 {
     color: #000000;
     font-family: 'Freight Sans Pro Medium', sans-serif;
-    font-size: 1em;
+    font-size: 0.9em;
     font-weight: 100;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     line-height: normal;
     position: relative;
     white-space: nowrap;
     width: fit-content;
+    text-transform: capitalize;
   }
