--- a/src/components/LocationSearchInput/LocationSearchInput.css
+++ b/src/components/LocationSearchInput/LocationSearchInput.css
@@ -1,16 +1,20 @@
 .head .Location-suggestion{
     display: flex;
-    gap: 10px;
+    gap: 5px;
     flex: 0 0 auto;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+    background-color: #ffffff;
+    border-radius: 50px;
+    border:lightgray 0.01px solid;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .head .Location-input {
-    border: 1px solid rgba(32, 46, 64, .8);
-    background:rgba(0, 0, 0, .08);;
-    border-color: #000000;
     display: inline-flex;   
     justify-content: center;
-    padding: 0px 10px;
+    padding: 0;
     position: relative;
     color: #000000;
     font-family: 'Freight Sans Pro Medium', sans-serif;
@@ -18,11 +22,24 @@
     font-weight: 500;
     letter-spacing: 0;
     line-height: normal;
+    border: none;
+  }
+  .head .text-input{
+    color: #000000;
+    font-family: 'Freight Sans Pro Medium', sans-serif;
+    font-size: 0.9em;
+    font-weight: 600;
+    letter-spacing: 0px;
+    line-height: normal;
+    margin-top: -1px;
+    position: relative;
+    white-space: nowrap;
+    text-transform: uppercase;
   }
   .head .Location-input::placeholder{
     color: #000000;
     font-family: 'Freight Sans Pro Medium', sans-serif;
-    font-size: 1em;
+    font-size: 0.9em;
     font-weight: 500;
     letter-spacing: 0.5px;
     line-height: normal;
@@ -42,4 +59,10 @@
     height: 40px; /* Set the height to be equal to the width */
     font-size: 28px;
     color: #ffffff; /* Optional: add color to make the text visible */
+  }
+  @media (max-width: 768px) {
+    
+  .head .Location-suggestion{
+    padding: 10px;
+}
   }
