--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -33,3 +33,66 @@
   font-size: 1em;
   font-weight: 400;
 }
+.home-container .splash{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 3% 0;
+}
+.splash .splash-text-container{
+  width: 40%;
+  display: flex;
+  align-items: center;
+}
+.splash .s-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 30px;
+  border:lightgray 0.01px solid;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  height: fit-content;
+  padding: 25px;
+  gap: 20px;
+  background-color: #ffff;
+  position: relative;
+  left: 30%;
+}
+.splash .splash-image-container{
+  width: 60%;
+}
+.splash .splash-image-container img{
+  width: 100%;
+  height: 100%;
+  
+}
+.splash .text-wrapper{
+  font-family: "brandon-grotesque", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.5em;
+  letter-spacing:1px;
+  line-height: 1.25;
+}
+.splash .text-wrapper2{
+  font-family: 'Alegreya', serif;
+  font-weight: 100;
+  font-size: 1em;
+  letter-spacing:1px;
+  font-style: normal;
+}
+.splash .splash-input{
+  width: 100%;
+}
+.splash .splash-input input{
+  width: 100%;
+  border-radius: 10px;
+  border:lightgray 0.01px solid;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  font-family: 'Freight Sans Pro Medium', sans-serif;
+  font-size: 1em;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: normal;
+}
