--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@
     justify-content: center;
     position: relative;
     width: 100%;
+    background-color: #202D3F;
   }
   
   .footer .footer-section {
@@ -75,7 +76,7 @@
   
   .footer .about-us-button-btn {
     align-items: center;
-    background-color: #000000;
+    background-color:#202D3F;
     border-radius: 30px;
     display: inline-flex;
     flex: 0 0 auto;
@@ -109,9 +110,8 @@
   .footer .footer-section-2-wrapper {
     align-items: flex-start;
     align-self: stretch;
-    background-color: #ebeaea;
     border-bottom-style: solid;
-    border-bottom-width: 0.94px;
+    border-bottom-width: 1px;
     border-color: #717171;
     display: flex;
     flex-direction: column;
@@ -146,7 +146,7 @@
   }
   
   .footer .text-wrapper-2 {
-    color: #000000;
+    color: #ffffff;
     font-family: 'Freight Sans Pro Medium', sans-serif;
     font-size: 1em;
     font-weight: 500;
@@ -168,6 +168,7 @@
     justify-content: center;
     position: relative;
     font-size: 22px;
+    color: #ffffff;
   }
   .footer .footer-section-email-collection{
     display: flex;
@@ -184,7 +185,6 @@
   .footer .footer-section-3-wrapper {
     align-items: center;
     align-self: stretch;
-    background-color: #ebeaea;
     display: flex;
     flex: 0 0 auto;
     flex-direction: column;
@@ -204,7 +204,7 @@
   }
   
   .footer .text-wrapper-5 {
-    color: #141313;
+    color: #ffffff;
     font-family: 'Freight Sans Pro Medium', sans-serif;
     font-size: 1em;
     font-weight: 500;
