--- a/src/components/SignUpPopUp/SignUpPopUp.css
+++ b/src/components/SignUpPopUp/SignUpPopUp.css
@@ -20,12 +20,12 @@
   
   .sign-up-pop-up .frame {
     position: relative;
-    background: #3779A6;
+    background: #202D3F;;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
-    padding: 20px;
+    padding: 25px;
     border-radius: 10px;
     z-index: 1001;
-    max-width: 350px;
+    max-width: fit-content;
     width: 100%;
     max-height: 70vh;
     overflow: hidden;
